Update: - rsyslog - dcgm - slurm - promotheus

--- a/roles/motd/templates/00-header.yml.j2
+++ b/roles/motd/templates/00-header.yml.j2
@@ -5,7 +5,7 @@ printf "\n"
 printf "*********************************************************************************\n"
 printf "*  - Please use /processing/<username> as scratch space for your jobs.          *\n"
 printf "*    This folder can also be accessed in the variable '\$SCRATCH'.               *\n"
-printf "*  - you can use 'nvtop' to monitor GPU usage interactively.                    *\n"
+printf "*  - You can use 'nvtop' to monitor GPU usage interactively.                    *\n"
 printf "*                                                                               *\n"
 printf "*  - Loading of modules can be done using 'spack'. More information is          *\n"
 printf "*    available on the confluence page.                                          *\n"
