--- a/roles/nhc/templates/nhc.conf.j2
+++ b/roles/nhc/templates/nhc.conf.j2
@@ -9,6 +9,9 @@
 # Check that the root filesystem is mounted rw
  {{ ansible_hostname }} || check_fs_mount_rw /
 
+# Check disk space in /processing
+ {{ ansible_hostname }} || check_fs_free /processing 10%
+
 # Check that Ethernet connections are up
 # (commented out as this detects interfaces that may not need to be online)
 {% set my_interfaces = ansible_interfaces|select('match', '(?!^(lo|docker|nodelocaldns)).*')|default(None) -%}
