--- a/roles/motd/templates/00-header.yml.j2
+++ b/roles/motd/templates/00-header.yml.j2
@@ -8,6 +8,6 @@ printf "*    This folder can also be accessed in the variable '\$SCRATCH'.      
 printf "*  - You can use 'nvtop' to monitor GPU usage interactively.                    *\n"
 printf "*                                                                               *\n"
 printf "*  - Loading of modules can be done using 'spack'. More information is          *\n"
-printf "*    available on the confluence page.                                          *\n"
+printf "*    available on https://docs.aiforoncology.nl/kosmos                          *\n"
 printf "*********************************************************************************\n"
 printf "\n"
