--- a/roles/motd/templates/00-header.yml.j2
+++ b/roles/motd/templates/00-header.yml.j2
@@ -4,10 +4,21 @@ printf "\nWelcome to KOSMOS, the AI for Oncology compute cluster\n"
 printf "\n"
 printf "*********************************************************************************\n"
 printf "*  - Please use /processing/<username> as scratch space for your jobs.          *\n"
-printf "*    This folder can also be accessed in the variable '\$SCRATCH'.               *\n"
+printf "*    This folder can also be accessed in the variable '\$SCRATCH'.              *\n"
 printf "*  - You can use 'nvtop' to monitor GPU usage interactively.                    *\n"
+printf "*  - Loading of modules can be done using 'spack'.                              *\n"
+printf "*  - Project related data should be stored in its own project folder. Request   *\n"
+printf "*    a new folder by sending a message in #tech-kosmos-requests.                *\n"
 printf "*                                                                               *\n"
-printf "*  - Loading of modules can be done using 'spack'. More information is          *\n"
-printf "*    available on https://docs.aiforoncology.nl/kosmos                          *\n"
+printf "*  - More information is available on https://docs.aiforoncology.nl/kosmos      *\n"
+printf "*                                                                               *\n"
+printf "*********************************************************************************\n"
+printf "*                                                                               *\n"
+printf "*  UPDATE OF 18 JANUARY 2023                                                    *\n"
+printf "*  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! *\n"
+printf "*  HOME FOLDERS HAVE BEEN MIGRATED TO A DIFFERENT FILE SERVER.                  *\n"
+printf "*  RUN migrate-homefolder TO MIGRATE YOUR HOME FOLDER TO THE NEW FILE SERVER.   *\n"
+printf "*  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! *\n"
+printf "*                                                                               *\n"
 printf "*********************************************************************************\n"
 printf "\n"
