--- a/roles/motd/templates/00-header.yml.j2
+++ b/roles/motd/templates/00-header.yml.j2
@@ -1,5 +1,22 @@
 #!/bin/sh
 
+BLACK=$(tput setaf 0)
+RED=$(tput setaf 1)
+GREEN=$(tput setaf 2)
+YELLOW=$(tput setaf 3)
+LIME_YELLOW=$(tput setaf 190)
+POWDER_BLUE=$(tput setaf 153)
+BLUE=$(tput setaf 4)
+MAGENTA=$(tput setaf 5)
+CYAN=$(tput setaf 6)
+WHITE=$(tput setaf 7)
+BRIGHT=$(tput bold)
+NORMAL=$(tput sgr0)
+BLINK=$(tput blink)
+REVERSE=$(tput smso)
+UNDERLINE=$(tput smul)
+
+
 printf "\nWelcome to KOSMOS, the AI for Oncology compute cluster\n"
 printf "\n"
 printf "*********************************************************************************\n"
@@ -12,7 +29,7 @@ printf "*    a new folder by sending a message in #tech-kosmos-requests.        
 printf "*                                                                               *\n"
 printf "*  - More information is available on https://docs.aiforoncology.nl/kosmos      *\n"
 printf "*                                                                               *\n"
-printf "*********************************************************************************\n"
+printf "${RED}*********************************************************************************\n"
 printf "*                                                                               *\n"
 printf "*  UPDATE OF 18 JANUARY 2023                                                    *\n"
 printf "*  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! *\n"
@@ -20,5 +37,5 @@ printf "*  HOME FOLDERS HAVE BEEN MIGRATED TO A DIFFERENT FILE SERVER.          
 printf "*  RUN migrate-homefolder TO MIGRATE YOUR HOME FOLDER TO THE NEW FILE SERVER.   *\n"
 printf "*  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! *\n"
 printf "*                                                                               *\n"
-printf "*********************************************************************************\n"
+printf "*********************************************************************************\n${NORMAL}"
 printf "\n"
