--- a/roles/motd/templates/00-header.yml.j2
+++ b/roles/motd/templates/00-header.yml.j2
@@ -17,25 +17,25 @@ REVERSE=$(tput smso)
 UNDERLINE=$(tput smul)
 
 
-printf "\nWelcome to KOSMOS, the AI for Oncology compute cluster\n"
-printf "\n"
-printf "*********************************************************************************\n"
-printf "*  - Please use /processing/<username> as scratch space for your jobs.          *\n"
-printf "*    This folder can also be accessed in the variable '\$SCRATCH'.              *\n"
-printf "*  - You can use 'nvtop' to monitor GPU usage interactively.                    *\n"
-printf "*  - Loading of modules can be done using 'spack'.                              *\n"
-printf "*  - Project related data should be stored in its own project folder. Request   *\n"
-printf "*    a new folder by sending a message in #tech-kosmos-requests.                *\n"
-printf "*                                                                               *\n"
-printf "*  - More information is available on https://docs.aiforoncology.nl/kosmos      *\n"
-printf "*                                                                               *\n"
-printf "${RED}*********************************************************************************\n"
-printf "*                                                                               *\n"
-printf "*  UPDATE OF 18 JANUARY 2023                                                    *\n"
-printf "*  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! *\n"
-printf "*  HOME FOLDERS HAVE BEEN MIGRATED TO A DIFFERENT FILE SERVER.                  *\n"
-printf "*  RUN migrate-homefolder TO MIGRATE YOUR HOME FOLDER TO THE NEW FILE SERVER.   *\n"
-printf "*  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! *\n"
-printf "*                                                                               *\n"
-printf "*********************************************************************************\n${NORMAL}"
-printf "\n"
+echo "\nWelcome to KOSMOS, the AI for Oncology compute cluster\n"
+echo "\n"
+echo "*********************************************************************************\n"
+echo "*  - Please use /processing/<username> as scratch space for your jobs.          *\n"
+echo "*    This folder can also be accessed in the variable '\$SCRATCH'.              *\n"
+echo "*  - You can use 'nvtop' to monitor GPU usage interactively.                    *\n"
+echo "*  - Loading of modules can be done using 'spack'.                              *\n"
+echo "*  - Project related data should be stored in its own project folder. Request   *\n"
+echo "*    a new folder by sending a message in #tech-kosmos-requests.                *\n"
+echo "*                                                                               *\n"
+echo "*  - More information is available on https://docs.aiforoncology.nl/kosmos      *\n"
+echo "*                                                                               *\n"
+echo "${RED}*********************************************************************************\n"
+echo "*                                                                               *\n"
+echo "*  UPDATE OF 18 JANUARY 2023                                                    *\n"
+echo "*  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! *\n"
+echo "*  HOME FOLDERS HAVE BEEN MIGRATED TO A DIFFERENT FILE SERVER.                  *\n"
+echo "*  RUN migrate-homefolder TO MIGRATE YOUR HOME FOLDER TO THE NEW FILE SERVER.   *\n"
+echo "*  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! *\n"
+echo "*                                                                               *\n"
+echo "*********************************************************************************$\n${NORMAL}"
+echo "\n"
