--- a/roles/motd/templates/00-header.yml.j2
+++ b/roles/motd/templates/00-header.yml.j2
@@ -37,5 +37,5 @@ echo "*  HOME FOLDERS HAVE BEEN MIGRATED TO A DIFFERENT FILE SERVER.            
 echo "*  RUN migrate-homefolder TO MIGRATE YOUR HOME FOLDER TO THE NEW FILE SERVER.   *\n"
 echo "*  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! *\n"
 echo "*                                                                               *\n"
-echo "*********************************************************************************$\n${NORMAL}"
+echo "*********************************************************************************\n${NORMAL}"
 echo "\n"
