--- a/roles/motd/templates/00-header.yml.j2
+++ b/roles/motd/templates/00-header.yml.j2
@@ -28,14 +28,5 @@ printf "*  - Project related data should be stored in its own project folder. Re
 printf "*    a new folder by sending a message in #tech-kosmos-requests.                *\n"
 printf "*                                                                               *\n"
 printf "*  - More information is available on https://docs.aiforoncology.nl/kosmos      *\n"
-printf "*                                                                               *\n"
-printf "${RED}*********************************************************************************\n"
-printf "*                                                                               *\n"
-printf "*  UPDATE OF 18 JANUARY 2023                                                    *\n"
-printf "*  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! *\n"
-printf "*  HOME FOLDERS HAVE BEEN MIGRATED TO A DIFFERENT FILE SERVER.                  *\n"
-printf "*  RUN migrate-homefolder TO MIGRATE YOUR HOME FOLDER TO THE NEW FILE SERVER.   *\n"
-printf "*  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! *\n"
-printf "*                                                                               *\n"
-printf "*********************************************************************************\n${NORMAL}"
+printf "*********************************************************************************\n"
 printf "\n"
