mount projects and homes through autofs. cleanup fstab on nodes. remove facts for mounts

--- a/roles/autofs/templates/master.j2
+++ b/roles/autofs/templates/master.j2
@@ -1,3 +1,4 @@
 +auto.master
 
-{{ autofs_mount }} /etc/{{ autofs_map }}
+{{ autofs_homes_mount }} /etc/{{ autofs_homes_map }}
+{{ autofs_projects_mount }} /etc/{{ autofs_projects_map }}
