--- a/roles/autofs/templates/network_homes.j2
+++ b/roles/autofs/templates/network_homes.j2
@@ -1,1 +1,1 @@
-* -fstype=nfs,rw,soft,intr {{ autofs_fileserver }}:{{ autofs_homes_path }}&
+* -fstype=nfs,rw,soft,intr {{ autofs_homes_server }}:{{ autofs_homes_path }}&
