add galileo. include initial software/data mounts. add dns config. update qos associations

--- a/roles/dns-config/templates/resolv.conf.j2
+++ b/roles/dns-config/templates/resolv.conf.j2
@@ -3,6 +3,7 @@
 {% for server in dns_config_servers %}
 nameserver {{ server }}
 {% endfor %}
+options edns0 trust-ad
 {% if dns_config_search %}
 search {{ dns_config_search | join(' ') }}
 {% endif %}
